development -> 1.5.1
 - Optimized DE type storage.
 - Fixed a race condition in CompactAlignmentToAnnotationCountsMode.java when running in Parallel
   by moving .reserve() out of the for loop.

1.5

 Added a mode to calculate counts and perform differential expression analysis for transcript
 runs (alignment-to-transcript-counts). Transcript runs are performed against a cDNA library. They
 finds matches through through exon-exon junctions represented in the input cDNA library. They are
 a faster alternative to mapping the genome and exon-exon boundaries separately. Disadvantage is that
 these searches will only map to transcripts represented in the input library.

 Changes to fasta-to-compact mode:
 - Add parallel processing in fasta-to-compact mode. Use the --parallel flag to activate.
 Will now only regenerate compact-reads that do not exist, or are older than the input file.

 Added a mode to write a read set to text format (set-to-text). The output will show the multiplicity of each query index.
 ReadSets can be efficiently created with tally-reads as before.

 Changes to CompactAlignmentToAnnotationCountsMode
 - added new option --write-annotation-counts boolean, defaults to true. If set to
   false the annotation counts intermediate files will not be written.
 - Lines where "average count group *" values are ALL NaN or <= 0 will not be written
   This makes it so lines that don't add anything to the output are just omitted.
 - added new option --omit-non-informative-columns, defaults to false. If set to
   true, columns in which all of the data is non-informative (values are ALL NaN or <= 0)
   will be omitted.
 - support for alternative global normalization methods. We currently provide an implementation of the
   upper quartile normalization method by Bullard et al (BUQ) and the normalization method
   provided in Goby 1.4 (CAC, normalize by the number of alignment record in a sample)